--- a/SiestaRobot/language/en.yaml
+++ b/SiestaRobot/language/en.yaml
@@ -9,7 +9,7 @@ set_chat_lang: "Great, using {} Language it is from now on!"
 
 # PM Text
 pm_start_text: |
-  ────「 sʜɪᴋɪᴍᴏʀɪ ᴍɪᴄᴄʜᴏɴ 」────
+  ────「 ᴀᴋᴀᴍᴇ 」────
   *ᴋᴏɴɴɪᴄʜɪᴡᴀ {}-ᴋᴜɴ ❤️*   
   ♡ ɪ'ᴍ ᴀᴋᴀᴍᴇ ᴀɴ ᴀɴɪᴍᴇ ᴛʜᴇᴍᴇᴅ ᴘᴏᴡᴇʀғᴜʟ ʀᴏʙᴏᴛ [✨](https://telegra.ph/file/0bcca848aa3bc422ba9e4.jpg)
   ───────────────────────
