--- a/SiestaRobot/language/en.yaml
+++ b/SiestaRobot/language/en.yaml
@@ -9,9 +9,10 @@ set_chat_lang: "Great, using {} Language it is from now on!"
 
 # PM Text
 pm_start_text: |
-  ────「 ᴀᴋᴀᴍᴇ 」────
+  ────「 Anya 
+
   *ᴋᴏɴɴɪᴄʜɪᴡᴀ {}-ᴋᴜɴ ❤️*   
-  ♡ ɪ'ᴍ ᴀᴋᴀᴍᴇ ᴀɴ ᴀɴɪᴍᴇ ᴛʜᴇᴍᴇᴅ ᴘᴏᴡᴇʀғᴜʟ ʀᴏʙᴏᴛ [✨](https://telegra.ph/file/0bcca848aa3bc422ba9e4.jpg)
+  ♡ ɪ'ᴍ Anya ᴀɴ ᴀɴɪᴍᴇ ᴛʜᴇᴍᴇᴅ ᴘᴏᴡᴇʀғᴜʟ ʀᴏʙᴏᴛ [✨](https://telegra.ph/file/922b3151ca3763c0739b9.jpg)
   ───────────────────────
   ♡  *sᴇʀᴠᴇʀ ᴜᴘᴛɪᴍᴇ:* `{}`             
   ♡  `{}` *ᴜsᴇʀs, ᴀᴄʀᴏss* `{}` *ᴄʜᴀᴛs.*  
@@ -19,12 +20,12 @@ pm_start_text: |
   ♡ ᴄʟɪᴄᴋ ᴛʜᴇ ʜᴇʟᴘ ʙᴜᴛᴛᴏɴ ᴛᴏ sᴇᴇ ᴍʏ ғᴇᴀᴛᴜʀᴇs.
    
 group_start_text: |
-  *💖 ʏᴏɪɪ!! ɪ'ᴍ ᴀᴋᴀᴍᴇ! ᴀᴍ ʜᴇʀᴇ ᴛᴏ ᴍᴀɴɢᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴡɪᴛʜ ᴀʟʟ ᴏғ ʏᴏᴜʀ ʟᴏᴠᴇ ᴀɴᴅ sᴜᴘᴘᴏʀᴛ*[💕](https://telegra.ph/file/0bcca848aa3bc422ba9e4.jpg)
+  *💖 ʏᴏɪɪ!! ɪ'ᴍ Anya! ᴀᴍ ʜᴇʀᴇ ᴛᴏ ᴍᴀɴɢᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴡɪᴛʜ ᴀʟʟ ᴏғ ʏᴏᴜʀ ʟᴏᴠᴇ ᴀɴᴅ sᴜᴘᴘᴏʀᴛ*[💕](https://telegra.ph/file/0bcca848aa3bc422ba9e4.jpg)
   
   *ᴀᴄᴛɪᴠᴇ sɪɴᴄᴇ :* `{}`
 
 pm_about_text: |
-  ♥ Hey Darling I'm *Akame*, a powerful group management bot built to help you manage your group easily. ♥ 
+  ♥ Hey Darling I'm *Anya*, a powerful group management bot built to help you manage your group easily. ♥ 
 
   ♡ I can restrict users.
   ♡ I can greet users with customizable welcome messages and even set a group's rules.
@@ -33,12 +34,12 @@ pm_about_text: |
   ♡ I have a note keeping system, blacklists, and even predetermined replies on certain keywords.
   ♡ I check for admins' permissions before executing any command and more stuffs
 
-  _Shikimori licensed under the GNU General Public License v3.0_
-  Click on button bellow to get basic help for Shikimori Micchon Robot.
+  _Anya licensed under the GNU General Public License v3.0_
+  Click on button bellow to get basic help for Shikimori Robot.
 pm_about_admin_text: |
   *♥ Let's make your group bit effective now ♥*
 
-  Congragulations, Akame Robot now ready to manage your group.
+  Congragulations, Anya Robot now ready to manage your group.
 
   *Admin Tools*
   Basic Admin tools help you to protect and powerup your group.
@@ -85,7 +86,7 @@ group_settings_text: "ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ɢᴇᴛ ᴛʜɪs ᴄʜᴀ
 group_settings_button: "sᴇᴛᴛɪɴɢs"
 
 # PM Button
-add_bot_to_group_button: "ᴀᴅᴅ ᴀᴋᴀᴍᴇ ᴛᴏ ɢʀᴏᴜᴘ"
+add_bot_to_group_button: "ᴀᴅᴅ ANYA ᴛᴏ ɢʀᴏᴜᴘ"
 
 
 support_chat_link_button: "ꜱᴜᴘᴘᴏʀᴛ"
